docs/frontend/parser_ebel.grammar.output
Grammar

    0 $accept: program "end of file"

    1 program: "end of file"
    2        | code "end of file"
    3        | code error '\n'
    4        | error '\n'

    5 code: instruction
    6     | pass
    7     | "new line"
    8     | code "new line"
    9     | code "new line" instruction
   10     | code "new line" pass

   11 instruction: CONCAT "number"
   12            | DEL
   13            | LOOP
   14            | NOP
   15            | SWAP "number"
   16            | RETURN instruction
   17            | RETURN

   18 pass: PASS type "expression"
   19     | PASS "expression"
   20     | PASS "words"
   21     | PASS "lines"
   22     | PASS "documents"

   23 type: TEXT
   24     | NUMBER
   25     | FLOAT
   26     | DELIMITER
   27     | SYMBOL
   28     | EMPTY


Terminals, with rules where they appear

    "end of file" (0) 0 1 2
    '\n' (10) 3 4
    error (256) 3 4
    "new line" (258) 7 8 9 10
    "number" <int> (259) 11 15
    CONCAT (260) 11
    DEL (261) 12
    LOOP (262) 13
    NOP (263) 14
    PASS (264) 18 19 20 21 22
    SWAP (265) 15
    RETURN (266) 16 17
    "words" (267) 20
    "lines" (268) 21
    "documents" (269) 22
    "expression" (270) 18 19
    TEXT (271) 23
    NUMBER (272) 24
    FLOAT (273) 25
    DELIMITER (274) 26
    SYMBOL (275) 27
    EMPTY (276) 28


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    program (24)
        on left: 1 2 3 4
        on right: 0
    code (25)
        on left: 5 6 7 8 9 10
        on right: 2 3 8 9 10
    instruction (26)
        on left: 11 12 13 14 15 16 17
        on right: 5 9 16
    pass (27)
        on left: 18 19 20 21 22
        on right: 6 10
    type <IR::Type> (28)
        on left: 23 24 25 26 27 28
        on right: 18


State 0

    0 $accept: • program "end of file"

    "end of file"  shift, and go to state 1
    error          shift, and go to state 2
    "new line"     shift, and go to state 3
    CONCAT         shift, and go to state 4
    DEL            shift, and go to state 5
    LOOP           shift, and go to state 6
    NOP            shift, and go to state 7
    PASS           shift, and go to state 8
    SWAP           shift, and go to state 9
    RETURN         shift, and go to state 10

    program      go to state 11
    code         go to state 12
    instruction  go to state 13
    pass         go to state 14


State 1

    1 program: "end of file" •

    $default  reduce using rule 1 (program)


State 2

    4 program: error • '\n'

    '\n'  shift, and go to state 15


State 3

    7 code: "new line" •

    $default  reduce using rule 7 (code)


State 4

   11 instruction: CONCAT • "number"

    "number"  shift, and go to state 16


State 5

   12 instruction: DEL •

    $default  reduce using rule 12 (instruction)


State 6

   13 instruction: LOOP •

    $default  reduce using rule 13 (instruction)


State 7

   14 instruction: NOP •

    $default  reduce using rule 14 (instruction)


State 8

   18 pass: PASS • type "expression"
   19     | PASS • "expression"
   20     | PASS • "words"
   21     | PASS • "lines"
   22     | PASS • "documents"

    "words"       shift, and go to state 17
    "lines"       shift, and go to state 18
    "documents"   shift, and go to state 19
    "expression"  shift, and go to state 20
    TEXT          shift, and go to state 21
    NUMBER        shift, and go to state 22
    FLOAT         shift, and go to state 23
    DELIMITER     shift, and go to state 24
    SYMBOL        shift, and go to state 25
    EMPTY         shift, and go to state 26

    type  go to state 27


State 9

   15 instruction: SWAP • "number"

    "number"  shift, and go to state 28


State 10

   16 instruction: RETURN • instruction
   17            | RETURN •

    CONCAT  shift, and go to state 4
    DEL     shift, and go to state 5
    LOOP    shift, and go to state 6
    NOP     shift, and go to state 7
    SWAP    shift, and go to state 9
    RETURN  shift, and go to state 10

    $default  reduce using rule 17 (instruction)

    instruction  go to state 29


State 11

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 30


State 12

    2 program: code • "end of file"
    3        | code • error '\n'
    8 code: code • "new line"
    9     | code • "new line" instruction
   10     | code • "new line" pass

    "end of file"  shift, and go to state 31
    error          shift, and go to state 32
    "new line"     shift, and go to state 33


State 13

    5 code: instruction •

    $default  reduce using rule 5 (code)


State 14

    6 code: pass •

    $default  reduce using rule 6 (code)


State 15

    4 program: error '\n' •

    $default  reduce using rule 4 (program)


State 16

   11 instruction: CONCAT "number" •

    $default  reduce using rule 11 (instruction)


State 17

   20 pass: PASS "words" •

    $default  reduce using rule 20 (pass)


State 18

   21 pass: PASS "lines" •

    $default  reduce using rule 21 (pass)


State 19

   22 pass: PASS "documents" •

    $default  reduce using rule 22 (pass)


State 20

   19 pass: PASS "expression" •

    $default  reduce using rule 19 (pass)


State 21

   23 type: TEXT •

    $default  reduce using rule 23 (type)


State 22

   24 type: NUMBER •

    $default  reduce using rule 24 (type)


State 23

   25 type: FLOAT •

    $default  reduce using rule 25 (type)


State 24

   26 type: DELIMITER •

    $default  reduce using rule 26 (type)


State 25

   27 type: SYMBOL •

    $default  reduce using rule 27 (type)


State 26

   28 type: EMPTY •

    $default  reduce using rule 28 (type)


State 27

   18 pass: PASS type • "expression"

    "expression"  shift, and go to state 34


State 28

   15 instruction: SWAP "number" •

    $default  reduce using rule 15 (instruction)


State 29

   16 instruction: RETURN instruction •

    $default  reduce using rule 16 (instruction)


State 30

    0 $accept: program "end of file" •

    $default  accept


State 31

    2 program: code "end of file" •

    $default  reduce using rule 2 (program)


State 32

    3 program: code error • '\n'

    '\n'  shift, and go to state 35


State 33

    8 code: code "new line" •
    9     | code "new line" • instruction
   10     | code "new line" • pass

    CONCAT  shift, and go to state 4
    DEL     shift, and go to state 5
    LOOP    shift, and go to state 6
    NOP     shift, and go to state 7
    PASS    shift, and go to state 8
    SWAP    shift, and go to state 9
    RETURN  shift, and go to state 10

    $default  reduce using rule 8 (code)

    instruction  go to state 36
    pass         go to state 37


State 34

   18 pass: PASS type "expression" •

    $default  reduce using rule 18 (pass)


State 35

    3 program: code error '\n' •

    $default  reduce using rule 3 (program)


State 36

    9 code: code "new line" instruction •

    $default  reduce using rule 9 (code)


State 37

   10 code: code "new line" pass •

    $default  reduce using rule 10 (code)
